--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "mongodb": "^4.0.1",
     "path": "^0.12.7",
+    "rita": "^2.4.86",
     "socket.io": "^3.1.0"
   },
   "author": "",
