--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google-cloud/speech": "^4.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "leo-profanity": "^1.3.0",
     "mongodb": "^4.0.1",
     "path": "^0.12.7",
     "rita": "^2.4.86",
